--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- PAGE TITLE -->
-		<title>{{ site.title }} :: {{ page.title }}</title>
+		<title>{{ site.name }} :: {{ page.title }}</title>
 
 		<!-- STYLESHEETS -->
 		<link rel="stylesheet" href="css/app.css" />
