--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,4 @@
+{% assign pages = site.pages %}
 <!-- HEADER SECTION -->
 		<div class="contain-to-grid header-section">
 
@@ -15,11 +16,13 @@
 				<!-- MENU ITEMS -->
 				<section class="top-bar-section">
 					<ul class="right">
-						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="blog.html">Blog</a></li>
+					{% for p in pages %}
+						<li {% if p.url == page.url %}class="active"{% endif %}><a href="{{ p.url }}">{{ p.title }}</a></li>
+						<!-- <li><a href="blog.html">Blog</a></li>
 						<li><a href="research.html">Research</a></li>
 						<li><a href="teaching.html">Teaching</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li> -->
+					{% endfor %}
 					</ul>
 				</section> 
 				<!-- END MENU ITEMS -->
