--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
 				<section class="top-bar-section">
 					<ul class="right">
 					{% for p in pages %}
-						<li {% if p.url == page.url %}class="active"{% endif %}><a href="{{ p.url }}">{{ p.title }}</a></li>
+						<li {% if p.url == page.url %}class="active"{% endif %}><a href="{{ site.url }}/{{ p.url }}">{{ p.title }}</a></li>
 						<!-- <li><a href="blog.html">Blog</a></li>
 						<li><a href="research.html">Research</a></li>
 						<li><a href="teaching.html">Teaching</a></li>
